KSENROLL-9122 - Rollover Status - Fixed the styling of status area that bleeds off of the box.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@56338 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -787,8 +787,21 @@ textarea,
 */
 .ks-rolloverResultsInfoSection-gridSubsection table {
     margin-bottom: -3px;
-    margin-left: 113px;
+    margin-left: 140px;
 }
+
+.ks-rolloverResultsInfoSection-gridSection table {
+    width: auto !important;
+    border: none;
+}
+
+.ks-rolloverResultsInfoSection-gridSection th,
+.ks-rolloverResultsInfoSection-gridSection td {
+     background-color: #dadada !important;
+     border: none;
+     width:200px;
+}
+
 /************************************** END ROLLOVER **************************************/
 
 
